--- a/src/styles/components/_filter-group.scss
+++ b/src/styles/components/_filter-group.scss
@@ -4,12 +4,12 @@
   border-radius: 10px;
   padding: 10px;
   @include flex-inline;
-  @include flex-align(center, center);
+  @include flex-align(center, middle);
 
   &__join {
     flex: 0 0 100px;
     @include flex-inline;
-    @include flex-align(center, center);
+    @include flex-align(center, middle);
     padding-right: 10px;
   }
 
